# dj-usb-checker

./: .gitignore  README.md  index.html  music-background-mockups.html  palette-builder.html  pyproject.toml  watch_notify.sh
src/usb_checker/: __init__.py  cli.py  collector.py  health.py  normalizer.py  scoring.py
src/usb_checker/rules/: engine.py  pioneer_profiles.json
src/usb_checker/ui/: app.py
tests/: test_rules_engine.py
tests/fixtures/: exfat_bad.json  fat32_good.json  multipartition_bad.json
