[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-checker"
version = "0.1.0"
description = "Pioneer-focused USB compatibility checker for macOS."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
usb-checker = "usb_checker.cli:main"
usb-checker-ui = "usb_checker.ui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
